prevent zoom in on mobile for input fields

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -84,7 +84,13 @@
 
   .taglines {
     h1 {
-      font-size: 40px;
+      font-size: 37px;
+    }
+  }
+
+  .input-group {
+    .form-control {
+      font-size: 17px;
     }
   }
 
